@@ -1,6 +1,7 @@
 /* MI Command Set - MI parser.
 
-   Copyright (C) 2000-2013 Free Software Foundation, Inc.
+   Copyright (C) 2000, 2001, 2002, 2007, 2008, 2009, 2010
+   Free Software Foundation, Inc.
 
    Contributed by Cygnus Solutions (a Red Hat company).
 
@@ -113,7 +114,7 @@ mi_parse_argv (char *args, struct mi_parse *parse)
     {
       char *arg;
 
-      /* Skip leading white space.  */
+      /* skip leading white space */
       while (isspace (*chp))
 	chp++;
       /* Three possibilities: EOF, quoted string, or other text. */
@@ -125,11 +126,11 @@ mi_parse_argv (char *args, struct mi_parse *parse)
 	  return;
 	case '"':
 	  {
-	    /* A quoted string.  */
+	    /* A quoted string. */
 	    int len;
 	    char *start = chp + 1;
 
-	    /* Determine the buffer size.  */
+	    /* Determine the buffer size. */
 	    chp = start;
 	    len = 0;
 	    while (*chp != '\0' && *chp != '"')
@@ -139,7 +140,7 @@ mi_parse_argv (char *args, struct mi_parse *parse)
 		    chp++;
 		    if (mi_parse_escape (&chp) <= 0)
 		      {
-			/* Do not allow split lines or "\000".  */
+			/* Do not allow split lines or "\000" */
 			freeargv (argv);
 			return;
 		      }
@@ -148,20 +149,21 @@ mi_parse_argv (char *args, struct mi_parse *parse)
 		  chp++;
 		len++;
 	      }
-	    /* Insist on a closing quote.  */
+	    /* Insist on a closing quote. */
 	    if (*chp != '"')
 	      {
 		freeargv (argv);
 		return;
 	      }
-	    /* Insist on trailing white space.  */
+	    /* Insist on trailing white space. */
 	    if (chp[1] != '\0' && !isspace (chp[1]))
 	      {
 		freeargv (argv);
 		return;
 	      }
-	    /* Create the buffer and copy characters in.  */
+	    /* create the buffer. */
 	    arg = xmalloc ((len + 1) * sizeof (char));
+	    /* And copy the characters in. */
 	    chp = start;
 	    len = 0;
 	    while (*chp != '\0' && *chp != '"')
@@ -176,13 +178,13 @@ mi_parse_argv (char *args, struct mi_parse *parse)
 		len++;
 	      }
 	    arg[len] = '\0';
-	    chp++;		/* That closing quote.  */
+	    chp++;		/* that closing quote. */
 	    break;
 	  }
 	default:
 	  {
-	    /* An unquoted string.  Accumulate all non-blank
-	       characters into a buffer.  */
+	    /* An unquoted string.  Accumulate all non blank
+	       characters into a buffer. */
 	    int len;
 	    char *start = chp;
 
@@ -197,12 +199,13 @@ mi_parse_argv (char *args, struct mi_parse *parse)
 	    break;
 	  }
 	}
-      /* Append arg to argv.  */
+      /* Append arg to argv. */
       argv = xrealloc (argv, (argc + 2) * sizeof (char *));
       argv[argc++] = arg;
       argv[argc] = NULL;
     }
 }
+
 
 void
 mi_parse_free (struct mi_parse *parse)
@@ -220,20 +223,12 @@ mi_parse_free (struct mi_parse *parse)
   xfree (parse);
 }
 
-/* A cleanup that calls mi_parse_free.  */
-
-static void
-mi_parse_cleanup (void *arg)
-{
-  mi_parse_free (arg);
-}
 
 struct mi_parse *
-mi_parse (char *cmd, char **token)
+mi_parse (char *cmd)
 {
   char *chp;
   struct mi_parse *parse = XMALLOC (struct mi_parse);
-  struct cleanup *cleanup;
 
   memset (parse, 0, sizeof (*parse));
   parse->all = 0;
@@ -241,60 +236,63 @@ mi_parse (char *cmd, char **token)
   parse->thread = -1;
   parse->frame = -1;
 
-  cleanup = make_cleanup (mi_parse_cleanup, parse);
-
-  /* Before starting, skip leading white space.  */
+  /* Before starting, skip leading white space. */
   while (isspace (*cmd))
     cmd++;
 
-  /* Find/skip any token and then extract it.  */
+  /* Find/skip any token and then extract it. */
   for (chp = cmd; *chp >= '0' && *chp <= '9'; chp++)
     ;
-  *token = xmalloc (chp - cmd + 1);
-  memcpy (*token, cmd, (chp - cmd));
-  (*token)[chp - cmd] = '\0';
+  parse->token = xmalloc ((chp - cmd + 1) * sizeof (char *));
+  memcpy (parse->token, cmd, (chp - cmd));
+  parse->token[chp - cmd] = '\0';
 
-  /* This wasn't a real MI command.  Return it as a CLI_COMMAND.  */
+  /* This wasn't a real MI command.  Return it as a CLI_COMMAND. */
   if (*chp != '-')
     {
       while (isspace (*chp))
 	chp++;
       parse->command = xstrdup (chp);
       parse->op = CLI_COMMAND;
-
-      discard_cleanups (cleanup);
-
       return parse;
     }
 
-  /* Extract the command.  */
+  /* Extract the command. */
   {
     char *tmp = chp + 1;	/* discard ``-'' */
 
     for (; *chp && !isspace (*chp); chp++)
       ;
-    parse->command = xmalloc (chp - tmp + 1);
+    parse->command = xmalloc ((chp - tmp + 1) * sizeof (char *));
     memcpy (parse->command, tmp, chp - tmp);
     parse->command[chp - tmp] = '\0';
   }
 
-  /* Find the command in the MI table.  */
+  /* Find the command in the MI table. */
   parse->cmd = mi_lookup (parse->command);
   if (parse->cmd == NULL)
-    error (_("Undefined MI command: %s"), parse->command);
+    {
+      /* FIXME: This should be a function call. */
+      fprintf_unfiltered
+	(raw_stdout,
+	 "%s^error,msg=\"Undefined MI command: %s\"\n",
+	 parse->token, parse->command);
+      mi_parse_free (parse);
+      return NULL;
+    }
 
-  /* Skip white space following the command.  */
+  /* Skip white space following the command. */
   while (isspace (*chp))
     chp++;
 
   /* Parse the --thread and --frame options, if present.  At present,
-     some important commands, like '-break-*' are implemented by
-     forwarding to the CLI layer directly.  We want to parse --thread
-     and --frame here, so as not to leave those option in the string
-     that will be passed to CLI.  */
+     some important commands, like '-break-*' are implemented by forwarding
+     to the CLI layer directly.  We want to parse --thread and --frame
+     here, so as not to leave those option in the string that will be passed
+     to CLI.  */
   for (;;)
     {
-      const char *option;
+      char *start = chp;
       size_t as = sizeof ("--all ") - 1;
       size_t tgs = sizeof ("--thread-group ") - 1;
       size_t ts = sizeof ("--thread ") - 1;
@@ -313,7 +311,6 @@ mi_parse (char *cmd, char **token)
         }
       if (strncmp (chp, "--thread-group ", tgs) == 0)
 	{
-	  option = "--thread-group";
 	  if (parse->thread_group != -1)
 	    error (_("Duplicate '--thread-group' option"));
 	  chp += tgs;
@@ -324,7 +321,6 @@ mi_parse (char *cmd, char **token)
 	}
       else if (strncmp (chp, "--thread ", ts) == 0)
 	{
-	  option = "--thread";
 	  if (parse->thread != -1)
 	    error (_("Duplicate '--thread' option"));
 	  chp += ts;
@@ -332,7 +328,6 @@ mi_parse (char *cmd, char **token)
 	}
       else if (strncmp (chp, "--frame ", fs) == 0)
 	{
-	  option = "--frame";
 	  if (parse->frame != -1)
 	    error (_("Duplicate '--frame' option"));
 	  chp += fs;
@@ -342,18 +337,27 @@ mi_parse (char *cmd, char **token)
 	break;
 
       if (*chp != '\0' && !isspace (*chp))
-	error (_("Invalid value for the '%s' option"), option);
+	error (_("Invalid value for the '%s' option"),
+	       start[2] == 't' ? "--thread" : "--frame");
       while (isspace (*chp))
 	chp++;
     }
 
   /* For new argv commands, attempt to return the parsed argument
-     list.  */
+     list. */
   if (parse->cmd->argv_func != NULL)
     {
       mi_parse_argv (chp, parse);
       if (parse->argv == NULL)
-	error (_("Problem parsing arguments: %s %s"), parse->command, chp);
+	{
+	  /* FIXME: This should be a function call. */
+	  fprintf_unfiltered
+	    (raw_stdout,
+	     "%s^error,msg=\"Problem parsing arguments: %s %s\"\n",
+	     parse->token, parse->command, chp);
+	  mi_parse_free (parse);
+	  return NULL;
+	}
     }
 
   /* FIXME: DELETE THIS */
@@ -362,9 +366,7 @@ mi_parse (char *cmd, char **token)
   if (parse->cmd->cli.cmd != NULL)
     parse->args = xstrdup (chp);
 
-  discard_cleanups (cleanup);
-
-  /* Fully parsed, flag as an MI command.  */
+  /* Fully parsed. */
   parse->op = MI_COMMAND;
   return parse;
 }
