@@ -1,3 +1,7 @@
+2010-12-06  Marc Khouzam  <marc.khouzam@ericsson.com>
+
+	* mi/mi-parse.c (mi_parse): Missing else.
+
 2010-11-25  Marc Khouzam  <marc.khouzam@ericsson.com>
 
 	PR breakpoints/12217
